Sort my continent

--- a/src/app/componets/_dialog/shared-dialog/shared-dialog.component.html
+++ b/src/app/componets/_dialog/shared-dialog/shared-dialog.component.html
@@ -5,15 +5,17 @@
     </p>
     <p *ngIf="data.message.p1" class="d-block mb-1">{{data.message.p1}}</p>
 
-    <p *ngIf="data.message.p2" class="d-block mb-3">{{data.message.p2}}</p>
+    <!-- <p *ngIf="data.message.p2" class="d-block mb-3">{{data.message.p2}}</p> -->
     <div *ngIf="data.message.p2">
         <hr class="mb-1 mt-4">
-        <small>Developed by: <strong>Saint</strong></small>
+        <small>Developed by: <strong>St.</strong></small>
         <br>
         <small>Whatsapp: <strong>+2349055175876</strong></small>
         <br>
-        <small>Email: <strong>saintzion777@gmail.com</strong></small>
+        <small>Email: <strong>stephen76494@gmail.com</strong></small>
 
+        <br>
+        <small>Github: <strong>/thesaintzion</strong></small>
     </div>
     <hr class="mb-0">
 
@@ -22,7 +24,7 @@
 
         <div class="  d-flex justify-content-end w-100">
             <div class="">
-                <button class="red-color" color="primary" tabindex="-1" mat-dialog-close mat-button>Close</button>
+                <button class="red-color mt-2" color="primary" tabindex="-1" mat-dialog-close mat-button>Close</button>
             </div>
         </div>
     </div>
