Sort by continent and country

--- a/src/app/componets/_dialog/shared-dialog/shared-dialog.component.html
+++ b/src/app/componets/_dialog/shared-dialog/shared-dialog.component.html
@@ -1,7 +1,7 @@
 <div class=" con">
     <!-- <div class="text-center"> -->
     <p *ngIf="data.message.p2" class="text-bolder  mb-2">
-        Covid-19
+        Covid-19 App
     </p>
     <p *ngIf="data.message.p1" class="d-block mb-1">{{data.message.p1}}</p>
 
